# aws-scrape-creds

./: README.md  aws_scrape_creds.py  pyproject.toml
